Individual grading might work

--- a/grading/templates/grading/attendance.html
+++ b/grading/templates/grading/attendance.html
@@ -1,4 +1,4 @@
-{% extends "home/../../../home/templates/shared/base.html" %}
+{% extends "shared/base.html" %}
 
 {% block content %}
 <form action="{% url "attendance" %}" method="post">
