Add chaperone tags

--- a/home/templates/shared/base.html
+++ b/home/templates/shared/base.html
@@ -66,6 +66,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="{% url "grading:tags_students" %}">Student tags</a></li>
                                 <li><a href="{% url "grading:tags_teachers" %}">Teacher tags</a></li>
+                                <li><a href="{% url "grading:tags_chaperones" %}">Chaperone tags</a></li>
                                 <li><a href="{% url "grading:shirt_sizes" %}">Shirt sizes</a></li>
                             </ul>
                         </li>
