--- a/grading/templates/grading/student/view.html
+++ b/grading/templates/grading/student/view.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 
-<h1 class="grader-title">Students ({{ students.count }})</h1>
+<h1 class="grader-title">Students ({{ total }})</h1>
 <p class="grader-switcher">Go to <a href="{% url 'grading:teams' %}">teams</a> &rarr;</p>
 
 <div class="form-group">
@@ -50,6 +50,26 @@
         </tr>
     {% endfor %}
 </table>
+
+<nav class="paginator" aria-label="...">
+    <ul class="pagination">
+        <li class="page-item {% if not page_obj.has_previous %}disabled{% endif %}">
+            <a class="page-link"
+                {% if page_obj.has_previous %}
+                href="?page={{ page_obj.previous_page_number }}"
+                {% endif %} tabindex="-1">Previous</a>
+        </li>
+        <li class="page-item disabled">
+            <a class="page-link">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</a>
+        </li>
+        <li class="page-item" {% if page_obj.has_next %}disabled{% endif %}>
+            <a class="page-link"
+               {% if page_obj.has_next %}
+               href="?page={{ page_obj.next_page_number }}"
+               {% endif %} tabindex="-1">Next</a>
+        </li>
+    </ul>
+</nav>
 
 <script type="text/javascript" src="{% static "js/grade.js" %}"></script>
 {% endblock %}
