Implement search for individuals

--- a/grading/templates/grading/attendance.html
+++ b/grading/templates/grading/attendance.html
@@ -5,7 +5,7 @@
 
 <h1>Attendance</h1>
 <div class="form-group">
-    <input id="search" type="text" placeholder="Student name" class="form-control" oninput="update()">
+    <input id="search" type="text" placeholder="Filter students" class="form-control" oninput="update()">
 </div>
 
 <h2 class="bump-down">Present</h2>
