--- a/grading/templates/grading/student/view.html
+++ b/grading/templates/grading/student/view.html
@@ -68,7 +68,7 @@
         <li class="page-item disabled">
             <a class="page-link">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</a>
         </li>
-        <li class="page-item" {% if page_obj.has_next %}disabled{% endif %}>
+        <li class="page-item {% if not page_obj.has_next %}disabled{% endif %}">
             <a class="page-link"
                {% if page_obj.has_next %}
                href="?page={{ page_obj.next_page_number }}"
