--- a/grading/templates/grading/team/view.html
+++ b/grading/templates/grading/team/view.html
@@ -8,12 +8,14 @@
 
 {% block content %}
 
-<h1 class="grader-title">Teams ({{ teams.count }})</h1>
+<h1 class="grader-title">Teams ({{ total }})</h1>
 <p class="grader-switcher">Go to <a href="{% url 'grading:students' %}">students</a> &rarr;</p>
 
-<div class="form-group">
-    <input class="form-control" id="search" name="search" placeholder="search" oninput="update();">
-</div>
+<form name="search" method="get">
+    <div class="form-group">
+        <input class="form-control" id="search" name="search" placeholder="Search teams">
+    </div>
+</form>
 
 <table id="teams" class="teams table table-striped table-hover">
     <tr>
@@ -46,5 +48,26 @@
     {% endfor %}
 </table>
 
+<nav class="paginator" aria-label="...">
+    <ul class="pagination">
+        <li class="page-item {% if not page_obj.has_previous %}disabled{% endif %}">
+            <a class="page-link"
+                {% if page_obj.has_previous %}
+                href="?page={{ page_obj.previous_page_number }}"
+                {% endif %} tabindex="-1">Previous</a>
+        </li>
+        <li class="page-item disabled">
+            <a class="page-link">Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</a>
+        </li>
+        <li class="page-item {% if not page_obj.has_next %}disabled{% endif %}">
+            <a class="page-link"
+               {% if page_obj.has_next %}
+               href="?page={{ page_obj.next_page_number }}"
+               {% endif %} tabindex="-1">Next</a>
+        </li>
+    </ul>
+</nav>
+
 <script type="text/javascript" src="{% static "js/grade.js" %}"></script>
+
 {% endblock %}
