--- a/grading/templates/grading/attendance.html
+++ b/grading/templates/grading/attendance.html
@@ -3,13 +3,13 @@
 
 {% block content %}
 
-<h1>Attendance</h1>
+<h1>Attendance <span class="right" id="loading">loading...</span></h1>
 <div class="form-group">
     <input id="search" type="text" placeholder="Filter students" class="form-control" oninput="update()">
 </div>
 
 <h2 class="bump-down">Present</h2>
-<table id="present" class="table table-striped">
+<table id="present" class="table attendance table-striped">
     <tr>
         <th class="name">Name</th>
         <th class="school">School</th>
@@ -18,7 +18,7 @@
 </table>
 
 <h2 class="bump-down">Absent</h2>
-<table id="absent" class="table table-striped">
+<table id="absent" class="table attendance table-striped">
     <tr>
         <th class="name">Name</th>
         <th class="school">School</th>
