--- a/grading/templates/grading/guts.html
+++ b/grading/templates/grading/guts.html
@@ -14,34 +14,36 @@
     MBMT Guts Round
     <span id="freeze" class="right" onclick="freeze()">Freeze!</span>
 </h1>
-<table class="scoreboard">
-    <tr>
-        <td valign="top">
-            <h2>{{ divisions.0 }}</h2>
-            <table class="table table-striped">
-                <tbody id="{{ divisions.0 | lower }}1"></tbody>
-            </table>
-        </td>
-        <td valign="top">
-            <h2>&nbsp;</h2>
-            <table class="table table-striped">
-                <tbody id="{{ divisions.0 | lower }}2"></tbody>
-            </table>
-        </td>
-        <td valign="top">
-            <h2>{{ divisions.1 }}</h2>
-            <table class="table table-striped">
-                <tbody id="{{ divisions.1 | lower }}1"></tbody>
-            </table>
-        </td>
-        <td valign="top">
-            <h2>&nbsp;</h2>
-            <table class="table table-striped">
-                <tbody id="{{ divisions.1 | lower }}2"></tbody>
-            </table>
-        </td>
-    </tr>
-</table>
+
+<div class="flexible">
+    <div>
+        <h2>{{ divisions.0 }}</h2>
+        <table class="table table-striped">
+            <tbody id="{{ divisions.0 }}1" class="scoreboard-body"></tbody>
+        </table>
+    </div>
+    <div>
+        <h2>&nbsp;</h2>
+        <table class="table table-striped">
+            <tbody id="{{ divisions.0 }}2" class="scoreboard-body"></tbody>
+        </table>
+    </div>
+
+    <div class="break"></div>
+    <div>
+        <h2>{{ divisions.1 }}</h2>
+        <table class="table table-striped">
+            <tbody id="{{ divisions.1 }}1" class="scoreboard-body"></tbody>
+        </table>
+    </div>
+    <div>
+        <h2>&nbsp;</h2>
+        <table class="table table-striped">
+            <tbody id="{{ divisions.1 }}2" class="scoreboard-body"></tbody>
+        </table>
+    </div>
+</div>
+
 
 <script type="text/javascript" src="{% static "js/guts.js" %}"></script>
 {% endblock %}
