--- a/home/static/css/master.css
+++ b/home/static/css/master.css
@@ -361,7 +361,7 @@ span.newline {
 }
 
 .grading .team {
-  padding-bottom: 1em;
+  padding-bottom: 0.25em;
   font-size: 20px;
 }
 
@@ -385,14 +385,45 @@ table#tags td {
 }
 
 .grading .grader { width: 50%; }
-.grading .grader td.qlabel {
+.grading .grader td.question-number {
   text-align: right;
+  padding: 8px;
   width: 40px;
   vertical-align: middle;
 }
-.grading .grader td input[type="radio"] {
+
+.grading .grader td {
+  padding: 0;
+  margin: 0;
+}
+
+.grading .grader {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.note {
+  color: gray;
+  font-style: italic;
+  padding-top: 0;
+}
+
+.grading .grader td label {
+  padding: 8px;
+  display: inline-block;
   margin-left: 20px;
   border: 0;
+  margin-bottom: 0;
+}
+
+.grading .grader td input[type="radio"] {
+  border: 0;
+  margin-top: 2px;
+  margin-bottom: 2px;
   width: 1.2em;
   height: 1.2em;
 }
