Add division to attendance

--- a/grading/templates/grading/attendance.html
+++ b/grading/templates/grading/attendance.html
@@ -13,6 +13,7 @@
     <tr>
         <th class="name">Name</th>
         <th class="school">School</th>
+        <th class="division">Division</th>
         <th class="attending">Attending</th>
     </tr>
 </table>
@@ -22,6 +23,7 @@
     <tr>
         <th class="name">Name</th>
         <th class="school">School</th>
+        <th class="division">Division</th>
         <th class="attending">Attending</th>
     </tr>
 </table>
