Scoreboard basically works but caching is sketchy.

--- a/home/templates/shared/base.html
+++ b/home/templates/shared/base.html
@@ -75,6 +75,7 @@
                         {% endif %}
                         {% else %}
                         <li><a href="{% url "coaches:index" %}">Coaching</a></li>
+                        <li><a href="{% url "grading:scoreboard_sponsors" %}">Scoreboard</a></li>
                         {% endif %}
                         <li><a href="{% url "home:logout" %}">Logout</a></li>
                         {% else %}
