--- a/home/templates/home/rules.html
+++ b/home/templates/home/rules.html
@@ -4,7 +4,7 @@
 
 <h1 class="lowerer">Official Rules</h1>
 <p>
-    Welcome to the third annual Montgomery Blair Math Tournament, or MBMT for short!
+    Welcome to the fifth annual Montgomery Blair Math Tournament, or MBMT for short!
     MBMT is a free middle school math contest that seeks to inspire students' interest in mathematics and to encourage them to explore math beyond the school curriculum.
     Contest details can be found on the <a href="{% url "home:about" %}">information page</a>.
 </p>
@@ -22,7 +22,7 @@
         <li>A team of 3 will only be required to have at least 1 test per subject.</li>
         <li>Teams of 1 or 2 have no restrictions; however, refer to rule #4 below for more information on teams of 1 or 2.</li>
     </ol>
-    <li>Teams compete in 1 of <b>2 divisions</b>: Division A, “Pascal,” or Division B, “Ramanujan.” Division A is suggested for students with more practice in competitions, whereas Division B is geared towards students with less experience. To suit different students’ abilities, each division offer different sets of questions in <b>all rounds</b>.</li>
+    <li>Teams compete in 1 of <b>2 divisions</b>: Division A, “Leibniz,” or Division B, “Descartes”. Division A is suggested for students with more practice in competitions, whereas Division B is geared towards students with less experience. To suit different students’ abilities, each division offer different sets of questions in <b>all rounds</b>.</li>
     <li>If there are fewer than 5 students interested in participating, you may register incomplete teams. For an incomplete team’s Team and Guts round scores to be officially considered, incomplete teams must have <b>at least 3 students</b>. Teams with one or two students may compete, but their Team and Guts round will not be officially graded.</li>
     <li>We <b>do not</b> allow mixed-school or mixed-organization teams. However, we do allow organizations consisting of students from multiple schools, home-school groups, and community activity groups, to name a few.</li>
     <li>We <b>do not</b> allow elementary school students to participate in MBMT. </li>
@@ -76,7 +76,7 @@
 <li>Students are also ranked individually in the subject tests. The <strong>top 3 individuals</strong> of each subject test in each division are recognized. These scores are calculated through a method that accounts for test item difficulty and normalizes the scores between tests.</li>
 <li>High-placement ties will be broken using tiebreaker rounds. Tiebreaker rounds will be held in the grading room during the activity.</li>
 <li>The <strong>team score</strong> is a weighted sum of the individual, Team Round, and Guts Round scores. The <strong>top 5 teams</strong> in each division will be recognized.</li>
-<li>The highest scoring 6th grade student in the Pascal division will receive the <strong>Eric Walstein Award</strong>, in honor of Mr. Eric Walstein, former math teacher and math team coach at Blair.</li>
+<li>The highest scoring 6th grade student in the Descartes division will receive the <strong>Young Scholar Award</strong>.</li>
 </ol>
 
 {% endblock %}
