--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -28,36 +28,104 @@ a round since we haven't done every round every year. In each year, the more dif
         </thead>
 
         <tbody>
+
+            <tr>
+                <th rowspan="2">2018</th>
+                <th>Cantor</th>
+                <td>
+                    <a href="{% static 'archive/2018/cantor/algebra.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2018/cantor/algebra_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2018/cantor/geo.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2018/cantor/geo_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2018/cantor/combo.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2018/cantor/combo_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2018/cantor/nt.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2018/cantor/nt_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    <a href="{% static 'archive/2018/cantor/team.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2018/cantor/team_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>N/A</td>
+                <td>
+                    <a href="{% static 'archive/2018/cantor/guts.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2018/cantor/guts_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+            </tr>
+
+            <tr>
+                <th>Gauss</th>
+                <td>
+                    <a href="{% static 'archive/2018/gauss/algebra.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2018/gauss/algebra_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2018/gauss/geo.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2018/gauss/geo_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2018/gauss/combo.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2018/gauss/combo_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    <a href="{% static 'archive/2018/gauss/nt.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2018/gauss/nt_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>
+                    -
+                </td>
+                <td>
+                    <a href="{% static 'archive/2018/gauss/team.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2018/gauss/team_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+                <td>N/A</td>
+                <td>
+                    <a href="{% static 'archive/2018/gauss/guts.pdf' %}" target="_blank">Problems</a>
+                    <br><a href="{% static 'archive/2018/gauss/guts_key.pdf' %}" target="_blank">Solutions</a>
+                </td>
+            </tr>
+
+
+
             <tr>
                 <th rowspan="2">2017</th>
                 <th>Ramanujan</th>
                 <td>
                     <a href="{% static 'archive/2017/ramanujan/al.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2017/ramanujan/al_key.pdf' %}" target="_blank">Full key</a>
+                    <br><a href="{% static 'archive/2017/ramanujan/al_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2017/ramanujan/ge.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2017/ramanujan/ge_key.pdf' %}" target="_blank">Full key</a>
+                    <br><a href="{% static 'archive/2017/ramanujan/ge_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2017/ramanujan/cp.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2017/ramanujan/cp_key.pdf' %}" target="_blank">Full key</a>
+                    <br><a href="{% static 'archive/2017/ramanujan/cp_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2017/ramanujan/nt.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2017/ramanujan/nt_key.pdf' %}" target="_blank">Full key</a>
+                    <br><a href="{% static 'archive/2017/ramanujan/nt_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     -
                 </td>
                 <td>
                     <a href="{% static 'archive/2017/ramanujan/team.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2017/ramanujan/team_key.pdf' %}" target="_blank">Full key</a>
+                    <br><a href="{% static 'archive/2017/ramanujan/team_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>N/A</td>
                 <td>
                     <a href="{% static 'archive/2017/ramanujan/guts.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2017/ramanujan/guts_key.pdf' %}" target="_blank">Full key</a>
+                    <br><a href="{% static 'archive/2017/ramanujan/guts_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
             </tr>
 
@@ -65,31 +133,31 @@ a round since we haven't done every round every year. In each year, the more dif
                 <th>Pascal</th>
                 <td>
                     <a href="{% static 'archive/2017/pascal/al.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2017/pascal/al_key.pdf' %}" target="_blank">Full key</a>
+                    <br><a href="{% static 'archive/2017/pascal/al_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2017/pascal/ge.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2017/pascal/ge_key.pdf' %}" target="_blank">Full key</a>
+                    <br><a href="{% static 'archive/2017/pascal/ge_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2017/pascal/cp.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2017/pascal/cp_key.pdf' %}" target="_blank">Full key</a>
+                    <br><a href="{% static 'archive/2017/pascal/cp_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2017/pascal/nt.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2017/pascal/nt_key.pdf' %}" target="_blank">Full key</a>
+                    <br><a href="{% static 'archive/2017/pascal/nt_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     -
                 </td>
                 <td>
                     <a href="{% static 'archive/2017/pascal/team.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2017/pascal/team_key.pdf' %}" target="_blank">Full key</a>
+                    <br><a href="{% static 'archive/2017/pascal/team_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>N/A</td>
                 <td>
                     <a href="{% static 'archive/2017/pascal/guts.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2017/pascal/guts_key.pdf' %}" target="_blank">Full key</a>
+                    <br><a href="{% static 'archive/2017/pascal/guts_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
             </tr>
 
@@ -99,32 +167,32 @@ a round since we haven't done every round every year. In each year, the more dif
                 <th>Euclid</th>
                 <td>
                     <a href="{% static 'archive/2016/euclid/al.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/euclid/al_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/euclid/al_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/euclid/ge.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/euclid/ge_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/euclid/ge_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/euclid/cp.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/euclid/cp_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/euclid/cp_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/euclid/nt.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/euclid/nt_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/euclid/nt_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/euclid/sprint.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/euclid/sprint_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/euclid/sprint_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/euclid/team.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/euclid/team_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/euclid/team_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>N/A</td>
                 <td rowspan="2">
                     <a href="{% static 'archive/2016/guts.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/guts_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/guts_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
             </tr>
 
@@ -132,27 +200,27 @@ a round since we haven't done every round every year. In each year, the more dif
                 <th>Lobachevsky</th>
                 <td>
                     <a href="{% static 'archive/2016/lobachevsky/al.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/lobachevsky/al_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/al_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/lobachevsky/ge.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/lobachevsky/ge_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/ge_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/lobachevsky/cp.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/lobachevsky/cp_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/cp_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/lobachevsky/nt.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/lobachevsky/nt_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/nt_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/lobachevsky/sprint.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/lobachevsky/sprint_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/sprint_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/lobachevsky/team.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/lobachevsky/team_key.pdf' %}" target="_blank">Key</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/team_key.pdf' %}" target="_blank">Solutions</a>
                 </td>
                 <td>N/A</td>
             </tr>
