Fix archive links

--- a/home/templates/home/archive.html
+++ b/home/templates/home/archive.html
@@ -167,32 +167,32 @@ a round since we haven't done every round every year. In each year, the more dif
                 <th>Euclid</th>
                 <td>
                     <a href="{% static 'archive/2016/euclid/al.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/euclid/al_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/euclid/al_key.pdf' %}" target="_blank">Answers</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/euclid/ge.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/euclid/ge_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/euclid/ge_key.pdf' %}" target="_blank">Answers</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/euclid/cp.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/euclid/cp_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/euclid/cp_key.pdf' %}" target="_blank">Answers</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/euclid/nt.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/euclid/nt_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/euclid/nt_key.pdf' %}" target="_blank">Answers</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/euclid/sprint.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/euclid/sprint_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/euclid/sprint_key.pdf' %}" target="_blank">Answers</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/euclid/team.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/euclid/team_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/euclid/team_key.pdf' %}" target="_blank">Answers</a>
                 </td>
                 <td>N/A</td>
                 <td rowspan="2">
                     <a href="{% static 'archive/2016/guts.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/guts_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/guts_key.pdf' %}" target="_blank">Answers</a>
                 </td>
             </tr>
 
@@ -200,27 +200,27 @@ a round since we haven't done every round every year. In each year, the more dif
                 <th>Lobachevsky</th>
                 <td>
                     <a href="{% static 'archive/2016/lobachevsky/al.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/lobachevsky/al_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/al_key.pdf' %}" target="_blank">Answers</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/lobachevsky/ge.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/lobachevsky/ge_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/ge_key.pdf' %}" target="_blank">Answers</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/lobachevsky/cp.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/lobachevsky/cp_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/cp_key.pdf' %}" target="_blank">Answers</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/lobachevsky/nt.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/lobachevsky/nt_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/nt_key.pdf' %}" target="_blank">Answers</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/lobachevsky/sprint.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/lobachevsky/sprint_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/sprint_key.pdf' %}" target="_blank">Answers</a>
                 </td>
                 <td>
                     <a href="{% static 'archive/2016/lobachevsky/team.pdf' %}" target="_blank">Problems</a>
-                    <br><a href="{% static 'archive/2016/lobachevsky/team_key.pdf' %}" target="_blank">Solutions</a>
+                    <br><a href="{% static 'archive/2016/lobachevsky/team_key.pdf' %}" target="_blank">Answers</a>
                 </td>
                 <td>N/A</td>
             </tr>
