Quick year adjective fix

--- a/home/templates/home/info.html
+++ b/home/templates/home/info.html
@@ -21,7 +21,7 @@
 {% if competition %}
 <h3>Logistics</h3>
 <p>
-    The fourth annual MBMT will occur in <strong>Montgomery Blair High School</strong> on <strong>{{ competition.date|date:"F jS, Y" }}</strong> from <strong>12:00 pm - 6:00 pm</strong>.
+    The {{ competition.year }} annual MBMT will occur in <strong>Montgomery Blair High School</strong> on <strong>{{ competition.date|date:"F jS, Y" }}</strong> from <strong>12:00 pm - 6:00 pm</strong>.
     Our address is <a href="https://www.google.com/maps/place/Montgomery+Blair+High+School/@39.0183042,-77.01385,17z/data=!3m1!4b1!4m5!3m4!1s0x89b7cf586f9b73d5:0xc227c473fffb50c7!8m2!3d39.0183042!4d-77.011656"><strong>51 University Blvd E, Silver Spring, MD 20901</strong></a>.
     Please arrive on the University Boulevard side of the school.
     <b>Snacks and drinks will be provided for students</b>.
